--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
 spring.datasource.url=jdbc:mysql://localhost:3306/CovidDataBase?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+spring.datasource.username=aaryanstudent
+spring.datasource.password=aaryanstudent
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
