--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://localhost:3306/CovidDataBase?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.username=aaryanstudent
-spring.datasource.password=aaryanstudent
+spring.datasource.url=jdbc:mysql://sql12.freemysqlhosting.net:3306/sql12383269?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=sql12383269
+spring.datasource.password=Mm6anXyCcw
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -13,12 +13,12 @@ spring.datasource.hikari.maximum-pool-size=5
 
 
 
-spring.activemq.in-memory=false
-spring.activemq.pool.enabled=false
-
-activemq.broker-url=tcp://localhost:61616
-activemq.username=admin
-activemq.password=admin
+#spring.activemq.in-memory=false
+#spring.activemq.pool.enabled=false
+#
+#activemq.broker-url=tcp://localhost:61616
+#activemq.username=admin
+#activemq.password=admin
 
 
 server.adminMailSender.email=covidTrackerMailUtility@gmail.com
